Changelog
=========

0.2.1 (unreleased)
------------------

- added Finnish locales [pingviini].

0.2.0 (2011-05-17)
------------------

- replaced $ with jq to make ie work for authenticated users
- added another view with overlay preview (reinstall via quickinstaller required)
- updated fullcalendar to 1.5.1

0.1.2 (2010-12-15)
------------------

- avoid javascript errors on the other views [jkubaile]
- added some svn:ignores [jensens]
- updated fullcalendar to official 1.4.9 [jensens]
- make div id to bind on more unique and remove superfluos try in js [jensens]

0.1.1 (2010-11-02)
------------------

- Better startup handling to avoid empty calendar view if js errors occure
- Added fullcalender_view as possible view for folders

0.1.0 (2010-10-02)
------------------

- Initial release