@@ -1,9 +1,0 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope"
-    xmlns:cmf="http://namespaces.zope.org/cmf"
-    i18n_domain="zettwerk.fullcalendar">
-
-  <!-- File System Directory Views registration -->
-  <cmf:registerDirectory name="zettwerk_fullcalendar_custom_templates"/>
-
-</configure>
